@@ -1,21 +1,19 @@
 package com.quartz.checkin.converter;
 
-import com.quartz.checkin.dto.response.ManagerTicketListResponse;
-import com.quartz.checkin.dto.response.ManagerTicketSummaryResponse;
-import com.quartz.checkin.dto.response.UserTicketListResponse;
-import com.quartz.checkin.dto.response.UserTicketSummaryResponse;
+import com.quartz.checkin.dto.ticket.response.ManagerTicketListResponse;
+import com.quartz.checkin.dto.ticket.response.ManagerTicketSummaryResponse;
+import com.quartz.checkin.dto.ticket.response.UserTicketListResponse;
+import com.quartz.checkin.dto.ticket.response.UserTicketSummaryResponse;
 import com.quartz.checkin.entity.Ticket;
-import org.springframework.data.domain.Page;
-
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.data.domain.Page;
 
 public class TicketResponseConverter {
 
     public static ManagerTicketListResponse toManagerTicketListResponse(Page<Ticket> ticketPage) {
         List<ManagerTicketSummaryResponse> ticketList = ticketPage.getContent().stream()
                 .map(ManagerTicketSummaryResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ManagerTicketListResponse(
                 ticketPage.getNumber() + 1,
@@ -29,7 +27,7 @@ public class TicketResponseConverter {
     public static UserTicketListResponse toUserTicketListResponse(Page<Ticket> ticketPage) {
         List<UserTicketSummaryResponse> ticketList = ticketPage.getContent().stream()
                 .map(UserTicketSummaryResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new UserTicketListResponse(
                 ticketPage.getNumber() + 1,
